databse from cloud

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3001
-PORT_BD=3306
-HOST_BD=localhost
-NAME_BD=cvm-database
+PORT_BD=55139
+HOST_BD=monorail.proxy.rlwy.net
+NAME_BD=railway
 USER_BD=root
-PASSWORD_BD=
+PASSWORD_BD=Gb2Fga-Cd2HfG-fD-c65gg-31beFGfBd
 SECRET_KEY=rN4Z3yn96rJLv!zzB(+q
 TOKEN_EXPIRATION_TIME=10000
