--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "firebase": "^10.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
