add new interface and update environments

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3001
-PORT_BD=55139
-HOST_BD=monorail.proxy.rlwy.net
-NAME_BD=railway
-USER_BD=root
-PASSWORD_BD=Gb2Fga-Cd2HfG-fD-c65gg-31beFGfBd
+DATABASE_PORT=57445
+DATABASE_HOST="monorail.proxy.rlwy.net"
+DATABASE_NAME="railway"
+DATABASE_USER="root"
+DATABASE_PASSWORD="-deeeH3bfb4AEBhEe5Db-bdcH6gbd3CF"
 SECRET_KEY=rN4Z3yn96rJLv!zzB(+q
 TOKEN_EXPIRATION_TIME=10000
